# 2024-2025-HotWheels

./: .deepsource.toml  .gitignore  .gitmodules  Dockerfile  Doxyfile  Instrument-Cluster.md  README.md  diff  get_artifact_carcontrols.sh  index.html
ADR/: 001-NvideaOrRaspberry.md  MiddlewareDecision.md
Arduino/: joining.ino  speed_sensor.ino  ultrasound_sensor.ino
ZeroC/: CarDataI.cpp  CarDataI.hpp  ClientThread.cpp  ClientThread.hpp  Joystick.cpp  Joystick.h  Joystick.ice
ZeroMQ/: CommonTypes.hpp  Publisher.cpp  Publisher.hpp  Subscriber.cpp  Subscriber.hpp
app/: BuildArm64Qt.md  CarClusterRoot.pro  HotWheels-app.pro  HotWheels-integration-tests.pro  HotWheels-tests.pro  HotWheels-unit-tests.pro  README.md  root.pro  root.pro.user.67e5c93
bazel_test/: .bazelrc  BUILD  Jetcar.hpp  WORKSPACE
car_controls/: CMakeLists.txt  Jetcar.cpp  Jetcar.hpp  Makefile  aarch64-toolchain.cmake  aarch64_toolchain.cmake  car-controls-qt.pro  controls.pro
car_controls/ZeroC/: CarDataI.hpp  Joystick.cpp  Makefile  client.cpp  compile.txt  server.cpp
car_controls/includes/: ControlsManager.hpp  EngineController.hpp  IPeripheralController.hpp  JoysticksController.hpp  PeripheralController.hpp  enums.hpp
car_controls/middleware/: CarDataI.cpp  ClientThread.cpp  Joystick.cpp  Joystick.h
car_controls/sources/: ControlsManager.cpp  EngineController.cpp  JoysticksController.cpp  PeripheralController.cpp  main.cpp
car_controls/tests/: MockJetcar.hpp  test_Jetcar.cpp
car_controls/tests/unit/: test_PeripheralController.cpp
coverage-car-controls/: index-sort-f.html  index-sort-l.html  index.html
coverage-cluster/: index-sort-f.html  index-sort-l.html  index.html
docs/: .gitignore  001-NvideaOrRaspberry_8md.html  BatteryController_8cpp.html  BatteryController_8cpp_source.html  BatteryController_8hpp.html  BatteryController_8hpp_source.html  BatteryController__TestDoc_8md.html  CANMessageProcessor_8cpp.html  CANMessageProcessor_8cpp_source.html  CANMessageProcessor_8hpp.html  CANMessageProcessor_8hpp.js  CANMessageProcessor_8hpp_source.html  CANMessageProcessor__TestDoc_8md.html  CameraStreamer_8cpp.html  CameraStreamer_8cpp_source.html  CameraStreamer_8hpp_source.html  CanBusManager_8cpp.html  CanBusManager_8cpp_source.html  CanBusManager_8hpp.html  CanBusManager_8hpp.js  CanBusManager_8hpp_source.html  CanBusManager__TestDoc_8md.html  (+2243 more)
(+3225 files in other folders)
